Updated page TechDraw DetailView/fr

--- a/wiki/fr/TechDraw_DetailView.html
+++ b/wiki/fr/TechDraw_DetailView.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw DetailView/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+DetailView&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_DetailView.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Detailansicht (90% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_DetailView.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Detailansicht (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_DetailView.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw DetailView (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_DetailView.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Vista dettaglio (90% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_DetailView.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Wstaw widok szczeg&oacute;&#322;u (90% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_DetailView.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw widok szczeg&oacute;&#322;u (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_DetailView.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1042;&#1089;&#1090;&#1072;&#1074;&#1080;&#1090;&#1100; &#1087;&#1086;&#1076;&#1088;&#1086;&#1073;&#1085;&#1099;&#1081; &#1042;&#1080;&#1076;" (20% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_DetailView.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#49345;&#49464;&#48372;&#44592; (50% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
@@ -79,19 +79,14 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li>Pour modifier une vue d&eacute;taill&eacute;e, double-cliquez dessus dans la vue en arborescence.</li>
+<ul><li>Pour modifier une vue d&eacute;taill&eacute;e, double-cliquez dessus dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>Les contours des vues d&eacute;taill&eacute;es peuvent &ecirc;tre ronds ou carr&eacute;s. Ceci est contr&ocirc;l&eacute; par la <b>Forme du contour pour les vues d&eacute;taill&eacute;es</b> des <a href="../fr/TechDraw_Preferences.html#Annotation" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rences</a>.</li>
 <li><a rel="nofollow" class="external text" href="https://www.forum.freecad.org/viewtopic.php?f=35&amp;t=34055#p285281">Forum avec une bonne discussion sur la d&eacute;termination du point d'ancrage</a>.</li></ul>
-</div>
 <p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Voir aussi&nbsp;: <a href="../fr/Property_editor.html" class="mw-redirect" title="Property editor/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
-</p>
-</div>
-<p>Dans les propri&eacute;t&eacute;s de <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Base View</b>, vous pouvez modifier l'apparence du contour d&eacute;taill&eacute;.
+<p>Voir aussi&nbsp;: <a href="../fr/Property_View.html" title="Property View/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
+</p><p>Dans les propri&eacute;t&eacute;s de <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Base View</b>, vous pouvez modifier l'apparence du contour d&eacute;taill&eacute;.
 </p><p>Une vue d&eacute;taill&eacute;e, en fait un objet <code>TechDraw::DrawViewDetail</code>, est d&eacute;riv&eacute;e d'une <a href="../fr/TechDraw_View.html#Propri%C3%A9t%C3%A9s_Vue_de_Part" title="TechDraw View/fr">vue de Part</a>, objet <code>TechDraw::DrawViewPart</code>, et h&eacute;rite de toutes ses propri&eacute;t&eacute;s. Elle poss&egrave;de &eacute;galement les propri&eacute;t&eacute;s suppl&eacute;mentaires suivantes&nbsp;:
 </p><p><span id="Data"></span>
 </p>
@@ -130,7 +125,7 @@
 <hr>
 <ul><li><b>Extensions&nbsp;:</b>
 <ul><li><b>Attributs et modifications&nbsp;:</b> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">Choix des attributs</a>, <a href="../fr/TechDraw_ExtensionChangeLineAttributes.html" title="TechDraw ExtensionChangeLineAttributes/fr">Modification des attributs</a>, <a href="../fr/TechDraw_ExtensionExtendLine.html" title="TechDraw ExtensionExtendLine/fr">Prolonger</a>, <a href="../fr/TechDraw_ExtensionShortenLine.html" title="TechDraw ExtensionShortenLine/fr">Raccourcir</a>, <a href="../fr/TechDraw_ExtensionLockUnlockView.html" title="TechDraw ExtensionLockUnlockView/fr">Verrouiller/d&eacute;verrouiller</a>, <a href="../fr/TechDraw_ExtensionPositionSectionView.html" title="TechDraw ExtensionPositionSectionView/fr">Positionner une vue en coupe</a>, Aligner (<a href="../fr/TechDraw_ExtensionPosHorizChainDimension.html" title="TechDraw ExtensionPosHorizChainDimension/fr">horizontalement</a> -  <a href="../fr/TechDraw_ExtensionPosVertChainDimension.html" title="TechDraw ExtensionPosVertChainDimension/fr">verticalement</a> - <a href="../fr/TechDraw_ExtensionPosObliqueChainDimension.html" title="TechDraw ExtensionPosObliqueChainDimension/fr">obliquemement</a>), Cascade (<a href="../fr/TechDraw_ExtensionCascadeHorizDimension.html" title="TechDraw ExtensionCascadeHorizDimension/fr">horizontale</a> - <a href="../fr/TechDraw_ExtensionCascadeVertDimension.html" title="TechDraw ExtensionCascadeVertDimension/fr">verticale</a> - <a href="../fr/TechDraw_ExtensionCascadeObliqueDimension.html" title="TechDraw ExtensionCascadeObliqueDimension/fr">inclin&eacute;e</a>), <a href="../fr/TechDraw_ExtensionAreaAnnotation.html" title="TechDraw ExtensionAreaAnnotation/fr">Calculer l'aire des faces s&eacute;lectionn&eacute;es</a>, <a href="../fr/TechDraw_ExtensionArcLengthAnnotation.html" title="TechDraw ExtensionArcLengthAnnotation/fr">Longueur d'arc d'ar&ecirc;tes s&eacute;lectionn&eacute;es</a>,  <a href="../fr/TechDraw_ExtensionCustomizeFormat.html" title="TechDraw ExtensionCustomizeFormat/fr">Personnaliser le format d'infobulle</a></li>
-<li><b>Lignes centrales, filetage et taraudage&nbsp;:</b> Axes (<a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">de centrage</a> - <a href="../fr/TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle/fr">de centrage de trous/vis</a>),  <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>,  <a href="../fr/TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom/fr">Taraudage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/fr">Corps de filetage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a>, <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersection de lignes</a>, <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle</a>, <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a>, Ligne ( <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">parall&egrave;le</a> - <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">perpendiculaire</a>)</li>
+<li><b>Lignes centrales, filetage et taraudage&nbsp;:</b> Axes (<a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">de centrage</a> - <a href="../fr/TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle/fr">de centrage de trous/vis</a>),  <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>,  <a href="../fr/TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom/fr">Taraudage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/fr">Corps de filetage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a>, <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersections cosm&eacute;tiques de lignes</a>, <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle</a>, <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a>, Ligne ( <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">parall&egrave;le</a> - <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">perpendiculaire</a>)</li>
 <li><b>Cotes&nbsp;:</b> <a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">Diam&egrave;tre '&#8960;'</a>, <a href="../fr/TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare/fr">Section tube '&#12348;'</a>, <a href="../fr/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/fr">Ins&eacute;rer le pr&eacute;fixe "n&times;"</a>,  <a href="../fr/TechDraw_ExtensionRemovePrefixChar.html" title="TechDraw ExtensionRemovePrefixChar/fr">Supprimer les symboles</a>, D&eacute;cimales (<a href="../fr/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/fr">en plus</a> - <a href="../fr/TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal/fr">en moins</a>)</li></ul></li></ul>
 <hr>
 <ul><li><b>Divers&nbsp;:</b> <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">Supprimer l'objet cosm&eacute;tique</a></li></ul>
@@ -153,35 +148,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260110171031
+Cached time: 20260119194859
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.137 seconds
-Preprocessor visited node count: 781/1000000
-Post&#8208;expand include size: 29807/2097152 bytes
-Template argument size: 10408/2097152 bytes
+CPU time usage: 0.110 seconds
+Real time usage: 0.625 seconds
+Preprocessor visited node count: 780/1000000
+Post&#8208;expand include size: 29835/2097152 bytes
+Template argument size: 10422/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1595/5000000 bytes
+Unstrip post&#8208;expand size: 1609/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.716      1 -total
- 23.10%   11.947      1 Template:TechDraw_Tools_navi/fr
- 15.21%    7.864     10 Template:PropertyData
- 11.35%    5.868      1 Template:Userdocnavi/fr
- 10.97%    5.672      2 Template:Navigation_menu_2
- 10.74%    5.555     10 Template:Variable
- 10.17%    5.261      2 Template:Docnav/fr
-  8.06%    4.167      1 Template:GuiCommand/fr
-  7.92%    4.098      2 Template:Version/fr
-  7.05%    3.647      8 Template:Incode
+100.00%  264.893      1 -total
+ 16.93%   44.856      1 Template:GuiCommand/fr
+ 15.95%   42.263      1 Template:TechDraw_Tools_navi/fr
+ 14.84%   39.319      2 Template:TitleProperty
+ 12.45%   32.980     10 Template:PropertyData
+ 11.99%   31.759      2 Template:Navigation_menu_2
+  8.86%   23.477      1 Template:Userdocnavi/fr
+  6.63%   17.557      2 Template:Docnav/fr
+  6.25%   16.569      1 Template:Caption
+  5.90%   15.631     10 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180648-0!canonical and timestamp 20260110171031 and revision id 1731354. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180648-0!canonical and timestamp 20260119194858 and revision id 1741115. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
