--- a/wiki/fr/TechDraw_DetailView.html
+++ b/wiki/fr/TechDraw_DetailView.html
@@ -8,7 +8,7 @@
 <li><a href="../ko/TechDraw_DetailView.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#49345;&#49464;&#48372;&#44592; (50% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ComplexSection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ComplexSection.html" title="TechDraw ComplexSection/fr">Vue en coupe complexe</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ProjectionGroup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ProjectionGroup.html" title="TechDraw ProjectionGroup/fr">Groupe de projection</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ProjectionGroup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ProjectionGroup.html" title="TechDraw ProjectionGroup/fr">Groupe de projections</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -148,15 +148,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119194859
+Cached time: 20260119194944
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.110 seconds
-Real time usage: 0.625 seconds
+CPU time usage: 0.109 seconds
+Real time usage: 0.373 seconds
 Preprocessor visited node count: 780/1000000
-Post&#8208;expand include size: 29835/2097152 bytes
-Template argument size: 10422/2097152 bytes
+Post&#8208;expand include size: 29838/2097152 bytes
+Template argument size: 10424/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -164,19 +164,19 @@ Unstrip post&#8208;expand size: 1609/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  264.893      1 -total
- 16.93%   44.856      1 Template:GuiCommand/fr
- 15.95%   42.263      1 Template:TechDraw_Tools_navi/fr
- 14.84%   39.319      2 Template:TitleProperty
- 12.45%   32.980     10 Template:PropertyData
- 11.99%   31.759      2 Template:Navigation_menu_2
-  8.86%   23.477      1 Template:Userdocnavi/fr
-  6.63%   17.557      2 Template:Docnav/fr
-  6.25%   16.569      1 Template:Caption
-  5.90%   15.631     10 Template:Variable
+100.00%  105.387      1 -total
+ 24.92%   26.261      1 Template:TechDraw_Tools_navi/fr
+ 19.49%   20.544      2 Template:Navigation_menu_2
+ 12.30%   12.962     10 Template:PropertyData
+ 12.16%   12.816      2 Template:TitleProperty
+  8.99%    9.473      1 Template:Userdocnavi/fr
+  8.10%    8.537      2 Template:Docnav/fr
+  7.54%    7.951      1 Template:GuiCommand/fr
+  7.03%    7.409     10 Template:Variable
+  6.15%    6.483      8 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180648-0!canonical and timestamp 20260119194858 and revision id 1741115. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180648-0!canonical and timestamp 20260119194944 and revision id 1741117. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
