--- a/wiki/fr/TechDraw_DetailView.html
+++ b/wiki/fr/TechDraw_DetailView.html
@@ -23,7 +23,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Vues de Techdraw &rarr; Ins&eacute;rer une vue d&eacute;taill&eacute;e
+<td class="ctEven">TechDraw &rarr; Vues de l'atelier Techdraw &rarr; Vue d&eacute;taill&eacute;e
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -148,15 +148,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119194957
+Cached time: 20260119195139
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.241 seconds
+CPU time usage: 0.091 seconds
+Real time usage: 0.179 seconds
 Preprocessor visited node count: 780/1000000
-Post&#8208;expand include size: 29841/2097152 bytes
-Template argument size: 10426/2097152 bytes
+Post&#8208;expand include size: 29835/2097152 bytes
+Template argument size: 10420/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -164,19 +164,19 @@ Unstrip post&#8208;expand size: 1609/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   81.741      1 -total
- 15.32%   12.525      1 Template:TechDraw_Tools_navi/fr
- 14.14%   11.558      2 Template:TitleProperty
- 12.92%   10.558     10 Template:PropertyData
- 11.51%    9.412      2 Template:Version/fr
- 10.66%    8.716      1 Template:Userdocnavi/fr
- 10.55%    8.620      2 Template:Navigation_menu_2
-  8.28%    6.769     10 Template:Variable
-  7.48%    6.111      1 Template:GuiCommand/fr
-  6.64%    5.427      8 Template:Incode
+100.00%   62.501      1 -total
+ 19.55%   12.221     10 Template:PropertyData
+ 17.19%   10.741      1 Template:TechDraw_Tools_navi/fr
+ 14.36%    8.973      2 Template:TitleProperty
+ 14.12%    8.827     10 Template:Variable
+ 10.90%    6.811      2 Template:Navigation_menu_2
+  7.65%    4.782      1 Template:Userdocnavi/fr
+  7.12%    4.451      2 Template:Version/fr
+  6.38%    3.989      1 Template:GuiCommand/fr
+  5.63%    3.516      8 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180648-0!canonical and timestamp 20260119194956 and revision id 1741119. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180648-0!canonical and timestamp 20260119195138 and revision id 1741121. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
