Updated page TechDraw RadiusDimension/fr

--- a/wiki/fr/TechDraw_RadiusDimension.html
+++ b/wiki/fr/TechDraw_RadiusDimension.html
@@ -62,17 +62,15 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Comment_faire">Comment faire</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>S&eacute;lectionnez un cercle ou un arc de cercle. La g&eacute;om&eacute;trie peut &ecirc;tre s&eacute;lectionn&eacute;e dans la <a href="../fr/3D_view.html" class="mw-redirect" title="3D view/fr">vue 3D</a> ou dans le dessin. Notez que certains arcs qui semblent circulaires sont en fait des ellipses ou des B-splines. Dans ce cas, vous ne pouvez pas d&eacute;finir une dimension de rayon.</li>
-<li>Si vous avez s&eacute;lectionn&eacute; une g&eacute;om&eacute;trie dans la vue 3D&nbsp;: ajoutez la bonne vue TechDraw &agrave; la s&eacute;lection en la s&eacute;lectionnant dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>.</li>
+<ol><li>S&eacute;lectionnez un cercle ou un arc de cercle. La g&eacute;om&eacute;trie peut &ecirc;tre s&eacute;lectionn&eacute;e dans la <a href="../fr/3D_View.html" title="3D View/fr">vue 3D</a> ou dans le dessin. Notez que certains arcs qui semblent circulaires sont en fait des ellipses ou des B-splines. Dans ce cas, vous ne pouvez pas d&eacute;finir une dimension de rayon.</li>
+<li>Si vous avez s&eacute;lectionn&eacute; une g&eacute;om&eacute;trie dans la vue 3D&nbsp;: ajoutez la bonne vue TechDraw &agrave; la s&eacute;lection en la s&eacute;lectionnant dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: si la <a href="../fr/TechDraw_Preferences.html#Cotes" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rence</a> <b>Outils de cotation</b> est r&eacute;gl&eacute;e sur <code>Outil unique</code> (par d&eacute;faut)&nbsp;: appuyez sur la fl&egrave;che vers le bas &agrave; droite du bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> et s&eacute;lectionnez l'option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChainDimension.svg&amp;filetimestamp=20240707201554&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cotes horizontales</b> du menu d&eacute;roulant.</li>
-<li>Si cette pr&eacute;f&eacute;rence a une valeur diff&eacute;rente (et dans <span style="font-size:small;color:blue;">version 0.21 et pr&eacute;c&eacute;dentes</span>)&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_RadiusDimension.svg&amp;filetimestamp=20241129143517&amp;.html" class="mw-file-description"><img src="../File/TechDraw_RadiusDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer une cote de rayon</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Dimensions &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_RadiusDimension.svg&amp;filetimestamp=20241129143517&amp;.html" class="mw-file-description"><img src="../File/TechDraw_RadiusDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer une cote de rayon</b> du menu.</li></ul></li>
+<ul><li><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: si la <a href="../fr/TechDraw_Preferences.html#Cotes" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rence</a> <b>Outils pour les cotes</b> est r&eacute;gl&eacute;e sur <code>Outil unique</code> (par d&eacute;faut)&nbsp;: appuyez sur la fl&egrave;che vers le bas &agrave; droite du bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> et s&eacute;lectionnez l'option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChainDimension.svg&amp;filetimestamp=20240707201554&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cotes horizontales</b> du menu d&eacute;roulant.</li>
+<li>Si cette pr&eacute;f&eacute;rence a une valeur diff&eacute;rente (et dans <span style="font-size:small;color:blue;">version 0.21 et pr&eacute;c&eacute;dentes</span>)&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_RadiusDimension.svg&amp;filetimestamp=20241129143517&amp;.html" class="mw-file-description"><img src="../File/TechDraw_RadiusDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cote de rayon</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_RadiusDimension.svg&amp;filetimestamp=20241129143517&amp;.html" class="mw-file-description"><img src="../File/TechDraw_RadiusDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cote de rayon</b> du menu.</li></ul></li>
 <li>Une cote est ajout&eacute;e &agrave; la vue.</li>
 <li>La cote peut &ecirc;tre d&eacute;plac&eacute;e jusqu'&agrave; la position souhait&eacute;e.</li>
 <li>Si n&eacute;cessaire, ajoutez des tol&eacute;rances comme d&eacute;crit sur <a href="../fr/TechDraw_Geometric_dimensioning_and_tolerancing.html#Tol.C3.A9rances" title="TechDraw Geometric dimensioning and tolerancing/fr">cette page</a>.</li></ol>
-</div>
 <p><span id="Display_3D_measurement"></span>
 </p>
 <h3><span class="mw-headline" id="Affichage_des_mesures_3D">Affichage des mesures 3D</span></h3>
@@ -155,15 +153,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119200639
+Cached time: 20260119200911
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.384 seconds
-Preprocessor visited node count: 437/1000000
-Post&#8208;expand include size: 26189/2097152 bytes
-Template argument size: 10225/2097152 bytes
+CPU time usage: 0.088 seconds
+Real time usage: 0.134 seconds
+Preprocessor visited node count: 436/1000000
+Post&#8208;expand include size: 26161/2097152 bytes
+Template argument size: 10197/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -171,19 +169,19 @@ Unstrip post&#8208;expand size: 3073/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   96.174      1 -total
- 41.00%   39.430      1 Template:TechDraw_Tools_navi/fr
- 12.69%   12.206      1 Template:Userdocnavi/fr
-  9.75%    9.373      1 Template:Code
-  9.30%    8.948      2 Template:Button
-  9.14%    8.788      2 Template:Navigation_menu_2
-  5.92%    5.693      1 Template:Value
-  4.63%    4.451      1 Template:GuiCommand/fr
-  4.39%    4.220      1 Template:VersionMinus/fr
-  4.09%    3.932      2 Template:Docnav/fr
+100.00%   37.527      1 -total
+ 18.80%    7.054      1 Template:TechDraw_Tools_navi/fr
+ 15.06%    5.651      1 Template:Value
+ 12.99%    4.873      2 Template:Navigation_menu_2
+ 12.43%    4.664      1 Template:Userdocnavi/fr
+  7.64%    2.867      1 Template:Code
+  7.39%    2.775      1 Template:Version/fr
+  7.24%    2.716      1 Template:GuiCommand/fr
+  6.63%    2.487      1 Template:Incode
+  6.47%    2.429      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87717-0!canonical and timestamp 20260119200639 and revision id 1741128. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87717-0!canonical and timestamp 20260119200911 and revision id 1741130. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
